Transform: Resize from UV Editor crashes with EXCEPTION_ACCESS_VIOLATION #61649

Closed
opened 2019-02-18 02:37:57 +01:00 by Robert Wallis · 3 comments

System Information
Operating system: Windows 10 Pro 1809
Graphics card: AMD Radeon R9-290x

Blender Version
Broken: 2.80, 319b9d6501, blender2.8, 2019-02-17 08:00

Short description of error
When the cursor is in the UV Editor, and you F3 search for "resize", and choose resize, then Blender crashes with EXCEPTION_ACCESS_VIOLATION.

Exact steps for others to reproduce the error

  • New "General" startup file.
  • Click "UV Editing" workspace tab.
  • In 3D Viewport go back to "Object" mode.
  • Place mouse cursor over UV view.
  • Press F3 and search for "Resize"
  • Press Return
  • Blender crashes.

Complete Error Log:

Error   : EXCEPTION_ACCESS_VIOLATION
Address : 0x00007FF735A6F3BB
Module  : C:\Users\Family\Downloads\blender-2.80.0-git.319b9d6501f2-windows64\blender.exe

Possibly related to #60075

Expected Behavior
I wasn't really expecting it to work, but I was looking for a way to resize my 1k image into a 512 image so I wouldn't have to open up an image editor.

Tested in 2.79 2018-03-22 f4dc9f9d68 and nothing happens, but it doesn't crash.

**System Information** Operating system: Windows 10 Pro 1809 Graphics card: AMD Radeon R9-290x **Blender Version** Broken: 2.80, 319b9d6501f2, blender2.8, 2019-02-17 08:00 **Short description of error** When the cursor is in the UV Editor, and you F3 search for "resize", and choose resize, then Blender crashes with EXCEPTION_ACCESS_VIOLATION. **Exact steps for others to reproduce the error** * New "General" startup file. * Click "UV Editing" workspace tab. * In 3D Viewport go back to "Object" mode. * Place mouse cursor over UV view. * Press F3 and search for "Resize" * Press Return * Blender crashes. Complete Error Log: ``` Error : EXCEPTION_ACCESS_VIOLATION Address : 0x00007FF735A6F3BB Module : C:\Users\Family\Downloads\blender-2.80.0-git.319b9d6501f2-windows64\blender.exe ``` Possibly related to #60075 **Expected Behavior** I wasn't really expecting it to work, but I was looking for a way to resize my 1k image into a 512 image so I wouldn't have to open up an image editor. Tested in 2.79 2018-03-22 f4dc9f9d68b and nothing happens, but it doesn't crash.
Author

Added subscriber: @Wallis

Added subscriber: @Wallis
Robert Wallis self-assigned this 2019-02-18 07:25:59 +01:00

This issue was referenced by 6e72601b90

This issue was referenced by 6e72601b905dc3df7a3890daad21c24411d63132

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#61649
No description provided.