Fix T61649: Transform resize from UV editor asserts

Change logic for error checking so it's easier to follow.